--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ plugins {
 group = 'xyz.yaohwu'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
+targetCompatibility = '1.8'
 
 configurations {
     developmentOnly
@@ -25,6 +26,10 @@ repositories {
 }
 
 dependencies {
+
+    // https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-json-org
+    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-json-org', version: '2.9.8'
+
     implementation 'org.springframework.boot:spring-boot-starter-quartz'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
